fix overflow on mobile

--- a/apps/blog/src/styles.css
+++ b/apps/blog/src/styles.css
@@ -61,6 +61,10 @@
     display: none;
   }
 
+  [data-employment-location]{
+    display:none !important;
+  }
+
   #about {
     flex-direction: column;
   }
